--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,7 +138,7 @@
         </div>
 
         <!-- Routes menu -->
-        <div class="col-2 menu-columns menu-columns--width d-flex flex-column">
+        <div class="col-2   menu-columns--width d-flex flex-column">
           <div>
             <!-- container needed for flexboxes -->
             <ul class="nav flex-column">
