Add delete alternate route functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -397,11 +397,11 @@
                         <div class="title-separator-icon text-secondary"><i class="material-icons">subject</i></div>
                         <div class="title-separator-text">
                           <div>Alternate Route ({{currentRoute.route.selectedAlternateRoute}}) Body </div>
-                          <!-- <div>
+                          <div>
                             <button class="btn btn-xs btn-danger"
                               (click)="removeAlternateRouteBody(currentRoute.route.selectedAlternateRoute)"><i
                                 class="material-icons material-icons-xs">delete</i> Delete alternate route</button>
-                          </div> -->
+                          </div>
                         </div>
                       </div>
                       <div class="flex-fill">
